# transformers

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gpt2_karpathy.py  np_transformer.py  process.txt  pyproject.toml  pyt_transformer.py  quantization.py  setup.sh  test_transformers.py  transformer.py
attention/: attention.py
configs/: olmo.yaml
configs/models/: gpt2.yaml
configs/training/: default.yaml
scripts/: Lab4_LLM_Quantization.ipynb  quantization.py
src/: model.py  train.py  utils.py
src/transformer/: attention.py  norms.py  pos_encoding.py  positional_encoding.py  transformer.py
tinychat/kernels/: matmul_int8.cc
tinychat/kernels/starter_code/: loop_unrolling.cc  reference.cc
