[project]
name = "quick-trainer"
version = "0.1.0"
description = "Repo for simple training of LLMs"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "Nicko Corriveau", email = "ncorriveau13@gmail.com"}
]
dependencies = [
    "torch>=2.1.1",
    "numpy>=1.26.2",
    "packaging>=23.2",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.2",
    "pydantic-core>=2.14.5",
    "tiktoken>=0.6.0",
    "click>=8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "src/**/*.yaml",
    "src/**/*.json",
]

[project.scripts]
train = "src.train:main"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src/"]
include = ["src/**/*.py"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["quick-trainer"]
combine-as-imports = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["PT012"]
